# UdemyCmake

./: .gitignore
2_CMake/01_HelloWorld/: .gitmodules  CMakeLists.txt  Makefile  conanfile.py  vcpkg.json
2_CMake/01_HelloWorld/app/: CMakeLists.txt  main.cpp
2_CMake/01_HelloWorld/cmake/: LTO.cmake  addGitSubmodule.cmake  sanitizer.cmake  warnings.cmake
2_CMake/01_HelloWorld/src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
2_CMake/01_HelloWorld/tests/: main.cpp
